--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -195,7 +195,7 @@
 		var curriculum = {};
 		var activities_list_loading = false;
 		var location_str = ('; '+document.cookie).split(`; location=`).pop().split(';')[0];
-		var location_ = (location_str == "") ? locations["B楼"] : JSON.parse(location_str);
+		var location_ = (location_str == "") ? locations.get("B楼") : JSON.parse(location_str);
 
 		/* Create video players. */
 		scanButtonAddEventListener("player0");
