make livestreams for xduers only

--- a/src/backend/templates/index.html
+++ b/src/backend/templates/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html style="height: 100%">
-	<title>Xdclassroom</title>
+	<title>Xdcheckin</title>
 	<meta name="viewport" content="user-scalable=no">
 	<link rel="shortcut icon" href="#"/>
 
 	<body id="eula-body" style="display:none; min-height: 80%; padding-top: 10%; padding-bottom: 10%; user-select: none">
 		<p align="center">
-			<B style="font-size:44px; font-family: sans-serif">Xdclassroom</B>
+			<B style="font-size:44px; font-family: sans-serif">Xdcheckin</B>
 			<br><br><br><br>
 			<B style="font-size:34px; font-family: sans-serif">
-				This site hosts classroom livestreams.
+				This APP provides utilities for Chaoxing check-ins
+				<br>
+				and classroom livestreams exclusively for XDUers.
 				<br><br>
 				By clicking you agree to the following terms:
 				<br><br>
