--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -15,7 +15,8 @@
 
 	<head>
 		<style>
-			div {font-size:22px; font-family: sans-serif; width: 100%; display: flex; justify-content: center;}
+			div {font-size:22px; font-family: sans-serif;}
+			.div-center {width: 100%; display: flex; justify-content: center; align-items: center;}
 			button {height: 40px; font-size: 22px; user-select: none;}
 			table, th, td {border: 1px solid black; border-collapse: collapse; text-align: center;}
 			table {width: 100%;}
@@ -26,29 +27,27 @@
 		<div id="xdcheckin-update-div" style="text-align: center; font-weight: bold; display: none;"></div>
 		<div id="xdcheckin-update-body-div" style="text-align: center; display: none;"></div>
 
-		<div id="chaoxing-div">
-			<div id="chaoxing-buttons">
-				<button id="chaoxing-login-button" onclick="chaoxingLogin()">Chaoxing Login</button>
-				<button id="chaoxing-curriculum-button" onclick="listCurriculum()" style="display: none">Show Curriculum</button>
-				<button id="chaoxing-locations-button" onclick="listLocation()" style="display: none">Select Location</button>
-				<button id="chaoxing-input-location-button" onclick="inputLocation()" style="display: none">Input Location</button>
-				<button id="chaoxing-activities-button" onclick="listActivity()" style="display: none">Check Activities</button>
-			</div>
-			<div id="curriculum-list-div" style="display: none"></div>
-			<div id="locations-list-div" style="display: none"></div>
-			<div id="activities-list-div" style="display: none"></div>
+		<div id="chaoxing-buttons" class="div-center">
+			<button id="chaoxing-login-button" onclick="chaoxingLogin()">Chaoxing Login</button>
+			<button id="chaoxing-curriculum-button" onclick="listCurriculum()" style="display: none">Show Curriculum</button>
+			<button id="chaoxing-locations-button" onclick="listLocation()" style="display: none">Select Location</button>
+			<button id="chaoxing-input-location-button" onclick="inputLocation()" style="display: none">Input Location</button>
+			<button id="chaoxing-activities-button" onclick="listActivity()" style="display: none">Check Activities</button>
 		</div>
+		<div id="curriculum-list-div" style="display: none"></div>
+		<div id="locations-list-div" style="display: none"></div>
+		<div id="activities-list-div" style="display: none"></div>
 
-		<div id="classrooms-buttons-div" style="display: none;">
+		<div id="classrooms-buttons-div" class="div-center" style="display: none;">
 			<button onclick="listClassroom()">Select Classroom</button>
 			<button onclick="reloadClassroom(...randClassroom())">I'm Feeling Lucky</button>
 			<button onclick="loadExtracted()">Load URL</button>
 			<button id="extract-classroom-button" onclick="extractClassroom()" style="display: none;">Extract URL</button>
-			<div id="classrooms-list-div" style="display: none;"></div>
 		</div>
+		<div id="classrooms-list-div" style="display: none;"></div>
 
-		<div id="xdcheckin-title-div" style="display: none; font-size:48px; font-family: sans-serif; font-weight: bold;">Xdcheckin</div>
-		<div id="players-buttons-div" style="display: none;">
+		<div id="xdcheckin-title-div" class="div-center" style="display: none; font-size:48px; font-family: sans-serif; font-weight: bold;">Xdcheckin</div>
+		<div id="players-buttons-div" class="div-center" style="display: none;">
 			<button onclick="play(player0); play(player1); play(player2); play(player3)">Play All</button>
 			<button onclick="stop(player0); stop(player1); stop(player2); stop(player3)">Stop All</button>
 			<button onclick="unmute(player0); unmute(player1); unmute(player2); unmute(player3)">Unmute All</button>
@@ -56,7 +55,7 @@
 			<button onclick="resize()">Resize All</button>
 		</div>
 
-		<div id="player0-buttons-div" style="display: none; width: auto;">
+		<div id="player0-buttons-div" class="div-center" style="display: none;">
 			<B style="font-size:40px; font-family: sans-serif;">PPTVideo</B>
 			&emsp;
 			<button onclick="play(player0)">Play</button>
@@ -65,10 +64,10 @@
 			<button onclick="mute(player0)">Mute</button>
 			<button id="player0-button-scan" onclick="scan(player0)">Scan (Whole)</button>
 		</div>
-		<div id="player0-div" style="display: block;"></div>
+		<div id="player0-div"></div>
 		<div id="player0-decodeddata-div" style="text-align: center; word-wrap: break-word; width: 400px;"></div>
 
-		<div id="player1-buttons-div" style="display: none; width: auto;">
+		<div id="player1-buttons-div" class="div-center" style="display: none;">
 			<B style="font-size:40px; font-family: sans-serif;">TeacherTrack</B>
 			&emsp;
 			<button onclick="play(player1)">Play</button>
@@ -76,9 +75,9 @@
 			<button onclick="unmute(player1)">Unmute</button>
 			<button onclick="mute(player1)">Mute</button>
 		</div>
-		<div id="player1-div" style="display: block;"></div>
+		<div id="player1-div"></div>
 
-		<div id="player2-buttons-div" style="display: none; width: auto;">
+		<div id="player2-buttons-div" class="div-center" style="display: none;">
 			<B style="font-size:40px; font-family: sans-serif;">TeacherFull</B>
 			&emsp;
 			<button onclick="play(player2)">Play</button>
@@ -86,9 +85,9 @@
 			<button onclick="unmute(player2)">Unmute</button>
 			<button onclick="mute(player2)">Mute</button>
 		</div>
-		<div id="player2-div" style="display: block;"></div>
+		<div id="player2-div"></div>
 
-		<div id="player3-buttons-div" style="display: none; width: auto;">
+		<div id="player3-buttons-div" class="div-center" style="display: none;">
 			<B style="font-size:40px; font-family: sans-serif;">StudentFull</B>
 			&emsp;
 			<button onclick="play(player3)">Play</button>
@@ -96,9 +95,9 @@
 			<button onclick="unmute(player3)">Unmute</button>
 			<button onclick="mute(player3)">Mute</button>
 		</div>
-		<div id="player3-div" style="display: block;"></div>
+		<div id="player3-div"></div>
 
-		<div id="footer-div" style="text-align: center; display: block;">
+		<div id="footer-div" class="div-center">
 			Copyright 2023 Pairman
 			<a href="https://github.com/Pairman/Xdcheckin">Source Code</a>
 		</div>
@@ -131,9 +130,9 @@
 						break;
 					}
 				}
-				if (xdcheckin_update_available) {
+				if (1 || xdcheckin_update_available) {
 					let e = document.getElementById("xdcheckin-update-div");
-					e.innerHTML = "<a href=\"" + xdcheckin_latest_release["html_url"] + "\">New APP version available! <br> Download " + xdcheckin_latest_release["tag_name"] + " here.</a>";
+					e.innerHTML = "<a href=\"" + xdcheckin_latest_release["html_url"] + "\">New APP version available!<br>Download " + xdcheckin_latest_release["tag_name"] + " here.</a>";
 					e.style.display = "block";
 					e = document.getElementById("xdcheckin-update-body-div");
 					e.innerText = xdcheckin_latest_release["body"];
@@ -192,7 +191,7 @@
 		const locations_list_div = document.getElementById("locations-list-div");
 		for (let buildingName in locations) {
 			let button = document.createElement("button");
-			button.innerText = buildingName + " (" + locations[buildingName]["latitude"] + ", " + locations[buildingName]["longitude"] + ")";
+			button.innerText = buildingName;
 			button.setAttribute('onclick', 'location_ = ' + JSON.stringify(locations[buildingName]));
 			locations_list_div.appendChild(button);
 		}
@@ -397,13 +396,7 @@
 			if (e.style.display == "none") {
 				e.innerText = "Loading activities.";
 				e.style.display = "block";
-				let res;
-				try {
-					res = await get("/chaoxing/get_activities");
-				}
-				catch (error) {
-					(res = {}).status_code == 500;
-				}
+				let res = await get("/chaoxing/get_activities");
 				if (res.status_code != 200) {
 					e.innerText = "No ongoing activities.";
 				}
@@ -606,14 +599,14 @@
 		}
 
 		qrcode.callback = async function(decodedData) {
-			document.getElementById("player0-decodeddata-div").innerText = "Scan result: <br>" + decodedData;
+			document.getElementById("player0-decodeddata-div").innerText = "Scan result:\n" + decodedData;
 			assert(decodedData.indexOf("mobilelearn.chaoxing.com/widget/sign") != -1, "Not a qrcode checkin URL.")
 			try {
 				decodeURIComponent(decodedData);
 			}
 			catch (error) {
 				decodedData = fixMalformedDecodedData(decodedData);
-				document.getElementById("player0-decodeddata-div").innerText = "Scan result (fixed): <br>" + decodedData;
+				document.getElementById("player0-decodeddata-div").innerText = "Scan result (fixed):\n" + decodedData;
 			}
 			try {
 				let params = new URLSearchParams(new URL(decodedData).search);
@@ -622,10 +615,10 @@
 				if (res.status_code == 200)
 					alert("Checked in successfully.");
 				else
-					document.getElementById("player0-decodeddata-div").innerText = "Checkin failed: <br>" + decodedData;
+					document.getElementById("player0-decodeddata-div").innerText = "Checkin failed:\n" + decodedData;
 			}
 			catch (error) {
-				document.getElementById("player0-decodeddata-div").innerText = "Checkin error: <br>" + error.message + " <br>" + decodedData;
+				document.getElementById("player0-decodeddata-div").innerText = "Checkin error:\n" + error.message + "\n" + decodedData;
 			}
 		};
 
@@ -670,7 +663,7 @@
 				return [username, password];
 			}
 			catch (err) {
-				alert("Invalid input.");
+				alert("Invalid input");
 			}
 		}
 
@@ -679,24 +672,19 @@
 			if (chaoxing_logining)
 				return;
 			chaoxing_logining = true;
-			username = get_cookie("username");
-			password = get_cookie("password");
+			[username, password] = [get_cookie("username"), get_cookie("password")];
 			if (username == "" || password == "") {
 				input = chaoxingInputAccount();
-				if (input) {
-					username = input[0];
-					password = input[1];
-				}
+				if (input)
+					[username, password] = input;
 				else
 					return chaoxing_logining = false;
 			}
 			else {
 				if(!confirm("Use previously entered account " + username + "?")) {
 					input = chaoxingInputAccount();
-					if (input) {
-						username = input[0];
-						password = input[1];
-					}
+					if (input)
+						[username, password] = input;
 					else
 						return chaoxing_logining = false;
 				}
@@ -734,33 +722,40 @@
 			chaoxing_logining = false;
 		}
 
+		class _get {
+			constructor(status_code, text){
+				this.status_code = status_code;
+				this.text = text;
+			}
+			json(){
+				try{
+					return JSON.parse(this.text);
+				}
+				catch (error) {
+					return undefined;
+				}
+			}
+		};
+
 		async function get(url = "", params = {}) {
-			class _get {
-				constructor(status_code, text){
-					this.status_code = status_code;
-					this.text = text;
-				}
-				json(){
-					try{
-						return JSON.parse(this.text);
-					}
-					catch (error) {
-						return undefined;
-					}
-				}
-			};
-			return $.ajax({
-				cache: true,
-				type: "GET",
-				url: url,
-				data: params,
-				contentType: "text/plain; charset=utf-8",
-				dataType: "text"
-			}).then(function (res) {
-				return new _get(200, res);
-			}).fail(function (req, status_code, error) {
-				return new _get(status_code, "");
-			});
+			try {
+				let status_code = 404, text = "";
+				await $.ajax({
+					cache: true,
+					type: "GET",
+					url: url,
+					data: params,
+					contentType: "text/plain; charset=utf-8",
+					dataType: "text"
+				}).done(function(data, status_text, res){
+					[status_code, text] = [res.status, data];
+				});
+				return new _get(status_code, text);
+			}
+			catch (err) {
+
+				return new _get(404, "");
+			}
 		}
 	</script>
 </html>
